fixed goto-next overlap defect

--- a/src/components/GotoNext/index.css
+++ b/src/components/GotoNext/index.css
@@ -40,6 +40,10 @@
 }
 
 @media screen and (max-width: 736px) {
+  .goto-next {
+    right: 0;
+    left: auto;
+  }
 }
 
 @media screen and (max-width: 480px) {
